# pick_and_place

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: panda_world.launch,.py
models/bin_blue/: model.config
models/bin_green/: model.config
models/bin_red/: model.config
models/block_blue/: model.config
models/block_green/: model.config
models/block_red/: model.config
models/underbin_bench/: model.config
models/workbench/: model.config
pick_and_place/: controller.py  object_detector.py  pick_and_place_state_machine.py
worlds/: pick_and_place.world
