<?xml version="1.0"?>
<package format="3">
  <name>pick_and_place</name>
  <version>0.0.0</version>
  <description>the pick_and_place package</description>
  <maintainer email="root@todo.todo">Aayush Mishra</maintainer>
  <license>MIT</license>
  <author>Aayush Mishra</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>tf_transformations</depend>
  <depend>moveit_commander</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend> <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../share/pick_and_place/models"/>
  </export>
</package>
